# service-depot

./: .env.example  .gitignore  README.md  apps.yaml  depot  docker-compose.yml  pyproject.toml
depot/: __init__.py  __main__.py  cli.py  compose.py  connect.py  setup.py
searxng/: settings.yml
