[project]
name = "service-depot"
version = "0.1.0"
description = "Shared support services (Langfuse observability, SearXNG, …) for any app, with a thin `depot` launcher over docker compose."
requires-python = ">=3.9"
dependencies = [
  "pyyaml",          # parse apps.yaml / discover compose profiles
]

[project.optional-dependencies]
# Nicer arrow-key/checkbox menus (optional; the launcher falls back to stdlib numbered prompts).
pretty = ["questionary>=2"]

[project.scripts]
depot = "depot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["depot*"]
